--- a/Home.css
+++ b/Home.css
@@ -20,3 +20,26 @@
 	cursor: pointer;
 	text-decoration: none;
 }
+
+.w-100 {
+	width: 100% !important;
+}
+
+.list-card {
+	min-height: 300px;
+}
+
+.btn-add-card {
+	width: fit-content !important;
+	height: fit-content !important;
+}
+
+.flex-1 {
+	flex: 1;
+}
+
+.card-add-list,
+.card-add-list:hover {
+	cursor: pointer;
+	font-size: xx-large;
+}
