Adicionado Ruby on Rails

--- a/app/views/home/index.html.erb
+++ b/app/views/home/index.html.erb
@@ -8,14 +8,11 @@
     <title>🌵 To Do Lists</title>
 
     <script src="https://kit.fontawesome.com/61ada1e52f.js" crossorigin="anonymous"></script>
-    <script src="./assets/js/jquery.min.js"></script>
-    <script src="./assets/js/sweetalert2.all.min.js"></script>
-    <script src="./assets/js/bootstrap.bundle.min.js"></script>
-    <script defer src="./assets/js/alpine.min.js"></script>
-    <script src="./assets/js/home.bundle.js"></script>
-
-    <link rel="stylesheet" href="./assets/js/bootstrap.min.css">
-    <link rel="stylesheet" href="./Home.css">
+    <%= javascript_include_tag "alpine.min" %>
+    <%= javascript_include_tag "bootstrap.bundle.min" %>
+    <%= javascript_include_tag "home.bundle" %>
+    <%= javascript_include_tag "jquery.min" %>
+    <%= javascript_include_tag "sweetalert2.all.min" %>
 
     <style>
         @import url('https://fonts.googleapis.com/css2?family=Roboto&display=swap');
